third_party/move/move-compiler/tests/move_check/skip_attribute_checks/duplicate_attributes.move
module 0x42::M {
    #[a, a(x = 0)]
    fun foo() {}

    #[b(a, a = 0, a(x = 1))]
    fun bar() {}
}
